# snake

./: CMakeLists.txt  DOCUMENTATION  Makefile
lib/list/: list.c  list.h  listtest.c
src/: constants.h  draw.c  draw.h  game.c  game.h  gameboard.c  gameboard.h  gamelogic.c  gamelogic.h  gameobject.h  point.c  point.h  snake.c  snake.h  utils.c  utils.h
